Change Qt creator version to 12.0.2

--- a/src/QNVim.json.in
+++ b/src/QNVim.json.in
@@ -1,6 +1,6 @@
 {
     \"Name\" : \"QNVim\",
-    \"Version\" : \"10.0.0_1\",
+    \"Version\" : \"12.0.2\",
     \"Vendor\" : \"Sassan Haradji\",
     \"Copyright\" : \"(C) Sassan Haradji\",
     \"License\" : \"MIT\",
