--- a/src/QNVim.json.in
+++ b/src/QNVim.json.in
@@ -1,10 +1,10 @@
 {
-    \"Name\" : \"QNVim\",
-    \"Version\" : \"12.0.2\",
-    \"Vendor\" : \"Sassan Haradji\",
-    \"Copyright\" : \"(C) Sassan Haradji\",
-    \"License\" : \"MIT\",
-    \"Description\" : \"Neovim Backend for Qt Creator\",
-    \"Url\" : \"https://github.com/sassanh/qnvim\",
-    $$dependencyList
+    "Name" : "QNVim",
+    "Version" : "${VERSION}",
+    "Vendor" : "Sassan Haradji",
+    "Copyright" : "(C) Sassan Haradji",
+    "License" : "MIT",
+    "Description" : "Neovim Backend for Qt Creator",
+    "Url" : "https:/github.com/sassanh/qnvim",
+    "dependencies" : "${IDE_PLUGIN_DEPENDENCIES}"
 }
